ui/apps/io.ox/core/viewer/style.less
/* ... */
/* OX Viewer Sidebar section panel generic styles */

.sidebar-panel {
    margin-bottom: 16px;

    .close { font-size: 16px; }

    .sidebar-panel-heading {
        position: relative;
        padding: 12px 0 5px 0;

        .panel-toggle-btn {
            color: inherit;
            position: absolute;
            top: 10px;
            right: 0;
        }

        h3 {
            font-size: 13px;
            font-weight: bold;
            margin-top: 0;
            margin-bottom: 0;
            cursor: default;
        }

        &.io-ox-busy:before { top: 185%; }
    }

    .sidebar-panel-body {
        padding: 12px 0 5px 0;

        &.panel-collapsed { display: none; }

        &:after {
            content: " ";
            display: table;
            clear: both;
        }

        dd,
        dt {
            line-height: 16px;
            margin-bottom: 8px;
            float: left;
        }

        dt {
            width: 33%;
            font-weight: normal;
            cursor: default;
            clear: both;
        }

        dd {
            width: 66%;
            .user-select(text);
            word-wrap: break-word;

            &.io-ox-busy:before {
                font-size: inherit;
                left: 0px;
                margin-left: 0px;
            }

            &.modified {
                > span {
                    display: block;
                }
            }
        }

        .versiontable {
            white-space: nowrap;
            margin-bottom: 0;

            td {
                padding: 0;
                border-top: none;
                line-height: 16px;
            }

            .version-content {
                padding: 0 0 8px 0;

                .createdby, .last_modified, .size {
                    padding: 2px 0;
                }

                .last_modified { float: right; }

                .size { text-align: left; }
            }

            .dropdown > a.current { font-weight: bold; }
        }

        .description {
            display: block;
            white-space: pre-wrap;
            line-height: 16px;
            .user-select(text);

            &.description-empty {
                .user-select(none);
                cursor: default;
            }
        }
    }

    &.viewer-fileinfo { margin-bottom: 0; }
}
/* ... */

