fix for 63840, fixed overlapping title in sidebar panel

--- a/ui/apps/io.ox/core/viewer/style.less
+++ b/ui/apps/io.ox/core/viewer/style.less
@@ -222,6 +222,9 @@
             font-weight: normal;
             cursor: default;
             clear: both;
+            text-overflow: ellipsis;
+            overflow: hidden;
+            white-space: nowrap;
         }
 
         dd {
